--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ serde = { version = "1", features = ["derive"] }
 chrono = "0.4"
 similar = "2"
 
+[dev-dependencies]
+tempfile = "3"
+
 
 [[bin]]
 name = "dft"
